tests/NormalTests/paczka1/fuzzy1/86179689.err
Error in line 7: 4tF S848 54,1
Error in line 28: dPCuihfYz1m S8i8 1ii,1
Error in line 26: AU77ZP0VC S848 94,6
Error in line 27: wAqF679BTh5 A441 87,8
Error in line 36: dPCu4	fYz1m A441 46,9
Error in line 21: dPCu4hfYz1m S848 83,3
